[gd_scene load_steps=2 format=3 uid="uid://caseselector001"]

[ext_resource type="Script" path="res://demo/case_selector_ui.gd" id="1"]

[node name="CaseSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a Case"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CasesList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewCaseButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Case"

[node name="EditButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Edit Case"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete Case"

[node name="StudyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Study Case"

[node name="ButtonsContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Export Case"

[node name="ImportButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import Case"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/NewCaseButton" to="." method="_on_new_case_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/StudyButton" to="." method="_on_study_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer2/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer2/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]